Fix dashboard buttons alignment and menu item font.

--- a/src/design/menu.scss
+++ b/src/design/menu.scss
@@ -15,7 +15,7 @@
   }
 
   .label {
-    @extend %font-medium-m;
+    @extend %font-regular-l;
     color: #000;
     white-space: nowrap;
   }
